# rust_web_fullstack

./: Cargo.toml  readme.md
http/src/: http_request.rs  http_response.rs
http_server/: Cargo.toml
http_server/public/: 404.html  health.html  index.html
http_server/src/: handler.rs  router.rs  server.rs
tcp_client/src/: main.rs
tcp_server/src/: main.rs
wasm-client/: Cargo.toml  LICENSE_MIT
wasm-client/src/: errors.rs  lib.rs
wasm-client/src/models/: course.rs
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  models.rs
webapp/static/: register.html
webservice/: .env  Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs
